# MaximumIndependentSet

MIS-EvolvingGraph/: CMakeLists.txt  CoreFromGraph.cpp  Graph.cpp  Graph.h  Node.cpp  Node.h  Queue.cpp  Queue.h  Vertex.cpp  Vertex.h  main.cpp  main.h  readme
